app-podinfo/podinfo-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: podinfo-gateway
  namespace: demo
spec:
  selector:
    istio: app-ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
